--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+*-venv/
 
 # Spyder project settings
 .spyderproject
@@ -160,3 +161,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+logs/*
+lightning_logs/
+*.png
+
+
+._.DS_Store
+profiler_out
